Search facility by destination or host
* Added columns 'Destinations' and 'Hosts' displaying destinations and hosts of a facility
* Facility select table now uses EnrichedFacility objects instead of RichFacility
* Generic component for displaying list values of objects was created
* Generic pipe for filtering unique values from list of objects was created

--- a/apps/admin-gui/src/assets/i18n/en.json
+++ b/apps/admin-gui/src/assets/i18n/en.json
@@ -66,14 +66,16 @@
   },
   "FACILITY_MANAGEMENT": {
     "TITLE": "Select facility",
-    "FILTER_PLACEHOLDER": "Filter by name, id, description or owner",
+    "FILTER_PLACEHOLDER": "Filter by name, id, description, owner, host or destination",
     "CREATE": "Create",
     "DELETE": "Delete",
     "TABLE": {
       "ID": "Id",
       "NAME": "Name",
       "DESCRIPTION": "Description",
-      "TECHNICAL_OWNERS": "Technical owners"
+      "TECHNICAL_OWNERS": "Technical owners",
+      "DESTINATIONS": "Destinations",
+      "HOSTS": "Hosts"
     }
   },
   "USER_MANAGEMENT": {
