AdminGUI - application form item dependencies
* From now, it is possible to select newly added items as dependencies
for other items. For the newly added items, we generate negative fake
ids. Backend is able to recognize these ids and will set the
dependencies accordingly.

--- a/apps/admin-gui/src/assets/i18n/en.json
+++ b/apps/admin-gui/src/assets/i18n/en.json
@@ -2291,7 +2291,8 @@
           "SELECT_ITEM": "Select item",
           "FIND_ITEM": "Find item...",
           "NO_ITEM_FOUND": "No matching item found",
-          "NO_ITEM": "No item selected (empty value)"
+          "NO_ITEM": "No item selected (empty value)",
+          "NEW_ITEM": "-- new item --"
         },
         "USER_SEARCH_SELECT": {
           "SELECT_USER": "Select user",
